style.css
body {
  font-family: Helvetica, sans-serif;
  background-color:#222327;
  color:#8fa0b3;
  background-image: url('bgtile.png');
  padding-top: 30px;
  padding-right: 50px;
  padding-bottom: 30px;
  padding-left: 50px;
}
.infobox {
  background-color:#27292d;
  width:27%;
  padding:20px;
  border-radius:15px;
  margin:30px 30px 0 0;
  display:inline-block;
  vertical-align: top;
}
.box {
  padding: 10px 0;
  border-radius:15px;
  margin:10px 0 0 0;
}
.boxbg {
  background-color:#27292d;
  padding:20px;
  border-radius:15px;
  margin:30px 0 0 0;
}
.icon {
  vertical-align: middle;
  width:15px;
  height:auto;
  padding-right: 10px
}
.logo {
  vertical-align: middle;
  width:64px;
  height:auto;
  padding-right: 15px
}
.headericon {
  vertical-align: middle;
  width:40px;
  height:auto;
  padding-right: 15px
}
.moreinfo {
  text-decoration-line:underline;
  text-decoration-style:dotted;
}
.moreinfo:hover span{
    display:block;
}
.moreinfo span{
    background: none repeat 0 0 #000000;
    width: auto;
    position: absolute;
    display:none;
    padding:10px;
    z-index: 2;
    border-radius: 10px;
    font-style: normal;
    font-size: 12px;
    color:#8fa0b3;
}
.moreinfo span:after{
    content:'';
    position:absolute;
    width:10px;
    height:10px;
}
h1 {
  color:white;
}
h2 {
  margin: 0 0 10px;
  color:white;
}
h3 {
  margin: 0 0 10px;
  color:white;
}
.navigation:link {
  padding: 10px 25px;
  border-radius: 5px;
  text-decoration: none;
  color:white;
  background: rgba(0, 0, 0, 0.2)
}
.navigation:visited {
  text-decoration: none;
  color:grey;
}
.navigation:hover {
  padding: 10px 25px;
  border-radius: 5px;
  text-decoration: none;
  background-color:#7f6ce8;
  opacity: 0.9;
  transition: 0.3s;
}
a:link {
  text-decoration: none;
  color:#7f6ce8;
}
a,a:visited {
  text-decoration: none;
  color:grey;
}
a:hover {
  opacity: 0.6;
  transition: 0.3s;
}
.holder {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  margin: 0.2em;
}
.cell {
  text-align: center;
  word-wrap: break-word;
  padding: 0.1em 0.4em;
}
.cell.hstart {
  border-right: solid 1px;
}
.cell.vstart {
  border-bottom: solid 1px;
}
b {
  color:lightblue;
}
i {
  color:lightgray;
}

